# x11bench

./: .gitignore  CMakeLists.txt  README.md
src/: capture.cpp  capture.hpp  compare.cpp  compare.hpp  display.cpp  display.hpp  image.cpp  image.hpp  main.cpp
src/tests/: test_advanced.cpp  test_base.hpp  test_colors.cpp  test_composite.cpp  test_shapes.cpp  test_text.cpp  test_windows.cpp
